# sc01SerialDisplay

./: .gitignore  CMakeLists.txt  partitions.csv  sc01SerialDisplay.sln  sc01SerialDisplay.vgdbproj  sdkconfig  sdkconfig.old
Design/: bluetooth.c  btn_about.c  btn_automation.c  btn_bluetooth.c  btn_opc.c  btn_quality.c  btn_variables.c  btn_wifi.c  btnhome-01.c  btnhome-02.c  btnhome-03.c  btnhome-04.c  btnhome-05.c  btnhome-06.c  copyright.c  folder.c  opc.c  pct.c  settings.c  splash.c  variables.c  wifi.c
components/LovyanGFX/src/: LovyanGFX.hpp
components/lvgl/src/extra/others/gridnav/: lv_gridnav.c
font/: lvgl-font.txt  mono_bold_16.c  mono_bold_24.c  mono_bold_28.c  mono_bold_32.c  mono_digital_20.c  mono_digital_24.c  mono_regualr_12.c  mono_regualr_16.c  mono_regualr_20.c
main/: CMakeLists.txt  RevisionHistory.h  configure.h  main.c  main.h
main/K_Core/: K_Core.c  K_Core.h  taskmanager.c  taskmanager.h
main/K_Core/adc/: adc-table.c  adc-table.h  adc.c  adc.h
main/K_Core/communication/: communication.c  communication.h  parser.c  parser.h
main/K_Core/display/: DisplayList.c  DisplayList.h
main/K_Core/execution/: bcode.c  bcode.h  cmdprocessor.c  cmdprocessor.h
main/K_Core/gpio/: GPIO.c  GPIO.h  pinout.h
main/K_Core/serial/: serial.c  serial.h
main/K_Core/tools/: tools.c  tools.h
main/L_Core/: lv_conf.h
main/L_Core/bluetooth/: ble-client.c  ble-server.c  ble.c  ble.h
main/L_Core/devices/: conf_WT32SCO1-Plus.h  display.c  display.h
main/L_Core/pct/: pct.c  pct.h
main/L_Core/sd-card/: sd-card.c  sd-card.h
main/L_Core/server/: parse.c  parse.h  server.c  server.h
main/L_Core/storage/: nvs.c  nvs.h  partition.c  partition.h
main/L_Core/ui/: ui-bluetooth.c  ui-bluetooth.h  ui-comm.c  ui-comm.h  ui-control.c  ui-control.h  ui-home.c  ui-home.h  ui-opc.c  ui-opc.h  ui-pct-new.c  ui-pct.c  ui-pct.h  ui-pct01.c  ui-pct01.h  ui-sdcard.c  ui-sdcard.h  ui-settings.c  ui-settings.h  ui-splash.c  ui-splash.h  ui.c  ui.h  ui_helpers.c
main/L_Core/ui/font/: en_12.c  en_16.c  en_bold_16.c  en_bold_20.c  en_bold_24.c  en_bold_30.c  font.h  mono_bold_16.c  mono_bold_24.c  mono_bold_28.c  mono_bold_32.c  mono_digital_20.c  mono_digital_24.c  mono_regualr_12.c  mono_regualr_14.c  mono_regualr_16.c  mono_regualr_20.c
main/L_Core/ui/images/: btn_about.c  btnhome-01.c  btnhome-02.c  btnhome-03.c  btnhome-04.c  btnhome-05.c  btnhome-06.c  btnhome-07.c  btnhome-08.c  controllers.c  copyright.c  fan.c  folder.c  heater.c  mark.c  mtr.c  resource_img.h  settings.c  variables.c
